--- a/wsgiadmin/templates/admin.html
+++ b/wsgiadmin/templates/admin.html
@@ -3,181 +3,194 @@
 
 
 {% block header %}
-    <div id="header">
+    <div class="navbar navbar-fixed-top">
 
-        {% comment %}
-            <h1><a href="/" id="logo">
-                <strong>{{ site }}</strong><span></span>
-            </a></h1>
-        {% endcomment %}
-        <div id="login">
-            <span class="username">
-                {% if not u.is_superuser and superuser != u %}
-                    <strong>{{ u.username }}</strong>
-                    <p id="prepnuti-uzivatele"><i>{% trans "switched" %}</i>
-                        <a href="{% url wsgiadmin.users.views.switch_to_admin 1 %}">{% trans "back" %}</a>
-                        <span id="uzivatel">({% trans "superuser" %})</span></p>
-                {% else %}
-                    {{ u.username }} {% if u.is_superuser %}
-                    <span id="uzivatel">({% trans "superuser" %})</span>{% endif %}
-                {% endif %}
-            </span>
-            <span class="logout">
-                <a class="btn-inverse btn" href="{% url django.contrib.auth.views.logout %}">{% trans "Logout" %}</a>
-            </span>
+        <div class="navbar-inner">
+            <div id="header" class="container">
+                <a href="/" class="brand">{{ site }}</a>
+                <ul class="nav pull-left" id="main-menu">
+                    <li
+                            {% if menu_active == "dashboard" %} class="active"{% endif %}>
+                        <a href="{% url wsgiadmin.useradmin.views.info %}">{% trans "Dashboard" %}</a>
+                    </li>
+                    {% if superuser.is_superuser %}
+                        <li
+                                {% if menu_active == "users" %} class="active"{% endif %}>
+                            <a href="{% url wsgiadmin.users.views.show %}" class="red">{% trans "Users" %}</a>
+                        </li>
+                    {% endif %}
+                    <li
+                            {% if menu_active == "domains" %} class="active"{% endif %}>
+                        <a href="{% url domains_list %}">{% trans "Domains" %}</a>
+                    </li>
+                    <li
+                            {% if menu_active == "webapps" %} class="active"{% endif %}>
+                        <a href="{% url app_list %}">{% trans "Web apps" %}</a>
+                    </li>
+                    <li{% if menu_active == "dbs" %} class="active"{% endif %}>
+                        <a href="{% url db_list %}">{% trans "Databases" %}</a>
+                    </li>
+                    <li{% if menu_active == "ftps" %} class="active"{% endif %}>
+                        <a href="{% url ftp_list %}">{% trans "FTP" %}</a>
+                    </li>
+                    <li
+                            {% if menu_active == "emails" %} class="active"{% endif %}>
+                        <a href="{% url mailbox_list %}">{% trans "E-mails" %}</a>
+                    </li>
+                    <li
+                            {% if menu_active == "settings" %} class="active"{% endif %}>
+                        <a href="{% url wsgiadmin.useradmin.views.change_passwd %}">{% trans "Settings" %}</a>
+                    </li>
+                </ul>
+                <ul class="nav pull-right">
+                    <li id="login">
+               <span class="username">
+                   {% if not u.is_superuser and superuser != u %}
+                       <strong>{{ u.username }}</strong>
+                       <p id="prepnuti-uzivatele"><i>{% trans "switched" %}</i>
+                           <a href="{% url wsgiadmin.users.views.switch_to_admin 1 %}">{% trans "back" %}</a>
+                           <span id="uzivatel">({% trans "superuser" %})</span>
+                       </p>
+                   {% else %}
+                       {{ u.username }} {% if u.is_superuser %}
+                       <span id="uzivatel">({% trans "superuser" %})</span>{% endif %}
+                   {% endif %}
+               </span>
+               <span class="logout">
+                   <a class="btn" href="{% url django.contrib.auth.views.logout %}">{% trans "Logout" %}</a>
+               </span>
+                    </li>
+                </ul>
+            </div>
         </div>
-
-        <ul id="main-menu">
-            <li
-                    {% if menu_active == "dashboard" %} class="active"{% endif %}>
-                <a class="btn" href="{% url wsgiadmin.useradmin.views.info %}">{% trans "Dashboard" %}</a>
-            </li>
-            {% if superuser.is_superuser %}
-                <li
-                        {% if menu_active == "users" %} class="active"{% endif %}>
-                    <a class="btn" href="{% url wsgiadmin.users.views.show %}" class="red">{% trans "Users" %}</a>
-                </li>
-            {% endif %}
-            <li{% if menu_active == "domains" %} class="active"{% endif %}>
-                <a class="btn" href="{% url domains_list %}">{% trans "Domains" %}</a>
-            </li>
-            <li{% if menu_active == "webapps" %} class="active"{% endif %}>
-                <a class="btn" href="{% url app_list %}">{% trans "Web apps" %}</a>
-            </li>
-            <li{% if menu_active == "dbs" %} class="active"{% endif %}>
-                <a class="btn" href="{% url db_list %}">{% trans "Databases" %}</a>
-            </li>
-            <li{% if menu_active == "ftps" %} class="active"{% endif %}>
-                <a class="btn" href="{% url ftp_list %}">{% trans "FTP" %}</a>
-            </li>
-            <li{% if menu_active == "emails" %} class="active"{% endif %}>
-                <a class="btn" href="{% url mailbox_list %}">{% trans "E-mails" %}</a>
-            </li>
-            <li{% if menu_active == "settings" %} class="active"{% endif %}>
-                <a class="btn" href="{% url wsgiadmin.useradmin.views.change_passwd %}">{% trans "Settings" %}</a>
-            </li>
-        </ul>
-
     </div>
 {% endblock %}
 {% block body %}
     <div class="row-fluid">
         <div class="span3">
-
-            <ul id="sidebar-menu">
+            <ul class="nav nav-list">
                 {% if menu_active == "dashboard" %}
                     <li>
-                        <a class="btn" href="{% url wsgiadmin.useradmin.views.info %}">{% trans "Home" %}</a>
+                        <a href="{% url wsgiadmin.useradmin.views.info %}">{% trans "Home" %}</a>
                     </li>
                     {% if superuser.is_superuser %}
                         <li>
-                            <a class="btn" href="{% url wsgiadmin.useradmin.views.master %}" class="red">{% trans "Master panel" %}</a>
+                            <a href="{% url wsgiadmin.useradmin.views.master %}" class="red">{% trans "Master panel" %}</a>
                         </li>{% endif %}
                     <li>
-                        <a class="btn" href="{% url wsgiadmin.useradmin.views.requests %}">{% trans "Last 20 server's request" %}</a>
+                        <a href="{% url wsgiadmin.useradmin.views.requests %}">{% trans "Last 20 server's request" %}</a>
                     </li>
                     <li>
-                        <a class="btn" href="{% url credit_stats %}">{% trans "Payout stats" %}</a>
+                        <a href="{% url credit_stats %}">{% trans "Payout stats" %}</a>
                     </li>
                     <li>
-                        <a class="btn" href="{% url credit %}" style="color: red;">{% trans "Buy some credit" %}</a>
+                        <a href="{% url credit %}" style="color: red;">{% trans "Buy some credit" %}</a>
                     </li>
                 {% endif %}
                 {% if menu_active == "users" %}
                     <li>
-                        <a class="btn" href="{% url wsgiadmin.users.views.show %}">{% trans "User's list" %}</a>
+                        <a href="{% url wsgiadmin.users.views.show %}">{% trans "User's list" %}</a>
                     </li>
                 {% endif %}
                 {% if menu_active == "invoices" %}
                     <li>
-                        <a class="btn" href="{% url wsgiadmin.invoices.views.add_invoice %}">{% trans "Add invoice" %}</a>
+                        <a href="{% url wsgiadmin.invoices.views.add_invoice %}">{% trans "Add invoice" %}</a>
                     </li>
                     <li>
-                        <a class="btn" href="{% url wsgiadmin.invoices.views.show %}">{% trans "Invoice's list" %}</a>
+                        <a href="{% url wsgiadmin.invoices.views.show %}">{% trans "Invoice's list" %}</a>
                     </li>
                 {% endif %}
                 {% if menu_active == "domains" %}
                     <li>
-                        <a class="btn" href="{% url wsgiadmin.domains.views.add %}">{% trans "Add registered domain" %}</a>
+                        <a href="{% url wsgiadmin.domains.views.add %}">{% trans "Add registered domain" %}</a>
                     </li>
                     <li>
-                        <a class="btn" href="{% url domains_list %}">{% trans "Domains list" %}</a>
+                        <a href="{% url domains_list %}">{% trans "Domains list" %}</a>
                     </li>
                 {% endif %}
                 {% if menu_active == "webapps" %}
                     <li>
-                        <a class="btn" href="{% url app_static app_type='static' %}">
-                            <span class="icon-plus"></span>
+                        <a href="{% url app_static app_type='static' %}">
+                            <i class="icon-plus"></i>
                             {% trans "Add static page" %}
-                        </a></li>
+                        </a>
+                    </li>
                     <li>
-                        <a class="btn" href="{% url app_static app_type='php' %}">
-                            <span class="icon-plus"></span>
-                            {% trans "Add PHP app" %}</a></li>
-                    <li><a class="btn" href="{% url app_wsgi %}">
-                        <span class="icon-plus"></span>
-                        {% trans "Add WSGI app" %}</a></li>
-                    <li><a class="btn" href="{% url app_list %}">
-                        <span class="icon-list"></span>
-                        {% trans "Your apps" %}</a></li>
-                    <li><a class="btn" href="{% url create_cron %}">
-                        <span class="icon-plus"></span>
-                        {% trans "Add cron record" %}</a></li>
-                    <li><a class="btn" href="{% url cron_list %}">
-                        <span class="icon-list"></span>
-                        {% trans "Crontab" %}</a>
+                        <a href="{% url app_static app_type='php' %}">
+                            <i class="icon-plus"></i>
+                            {% trans "Add PHP app" %}</a>
+                    </li>
+                    <li>
+                        <a href="{% url app_wsgi %}">
+                            <i class="icon-plus"></i>
+                            {% trans "Add WSGI app" %}</a>
+                    </li>
+                    <li>
+                        <a href="{% url app_list %}">
+                            <i class="icon-list"></i>
+                            {% trans "Your apps" %}</a>
+                    </li>
+                    <li>
+                        <a href="{% url create_cron %}">
+                            <i class="icon-plus"></i>
+                            {% trans "Add cron record" %}</a>
+                    </li>
+                    <li>
+                        <a href="{% url cron_list %}">
+                            <i class="icon-list"></i>
+                            {% trans "Crontab" %}</a>
                     </li>
                 {% endif %}
                 {% if menu_active == "dbs" %}
                     <li>
-                        <a class="btn" href="{% url wsgiadmin.db.views.add dbtype='mysql' %}">{% trans "Add MySQL database" %}</a>
+                        <a href="{% url wsgiadmin.db.views.add dbtype='mysql' %}">{% trans "Add MySQL database" %}</a>
                     </li>
                     <li>
-                        <a class="btn" href="{% url db_list dbtype='mysql' %}">{% trans "MySQL databases" %}</a>
+                        <a href="{% url db_list dbtype='mysql' %}">{% trans "MySQL databases" %}</a>
                     </li>
                     <li>
-                        <a class="btn" href="{% url wsgiadmin.db.views.add dbtype='pgsql' %}">{% trans "Add postgresql database" %}</a>
+                        <a href="{% url wsgiadmin.db.views.add dbtype='pgsql' %}">{% trans "Add postgresql database" %}</a>
                     </li>
                     <li>
-                        <a class="btn" href="{% url db_list dbtype='pgsql' %}">{% trans "PostgreSQL databases" %}</a>
+                        <a href="{% url db_list dbtype='pgsql' %}">{% trans "PostgreSQL databases" %}</a>
                     </li>
                 {% endif %}
                 {% if menu_active == "emails" %}
                     <li>
-                        <a class="btn" href="{% url add_mailbox %}">{% trans "Add e-mail account" %}</a>
+                        <a href="{% url add_mailbox %}">{% trans "Add e-mail account" %}</a>
                     </li>
                     <li>
-                        <a class="btn" href="{% url mailbox_list %}">{% trans "E-mail's accounts" %}</a>
+                        <a href="{% url mailbox_list %}">{% trans "E-mail's accounts" %}</a>
                     </li>
                     <li>
-                        <a class="btn" href="{% url add_redirect %}">{% trans "Add redirection" %}</a>
+                        <a href="{% url add_redirect %}">{% trans "Add redirection" %}</a>
                     </li>
                     <li>
-                        <a class="btn" href="{% url redirect_list %}">{% trans "Redirections" %}</a>
+                        <a href="{% url redirect_list %}">{% trans "Redirections" %}</a>
                     </li>
                 {% endif %}
                 {% if menu_active == "ftps" %}
                     <li>
-                        <a class="btn" href="{% url ftp_upsert %}">{% trans "Add FTP account" %}</a>
+                        <a href="{% url ftp_upsert %}">{% trans "Add FTP account" %}</a>
                     </li>
                     <li>
-                        <a class="btn" href="{% url ftp_list %}">{% trans "List of FTP accounts" %}</a>
+                        <a href="{% url ftp_list %}">{% trans "List of FTP accounts" %}</a>
                     </li>
                 {% endif %}
                 {% if menu_active == "settings" %}
                     <li>
-                        <a class="btn" href="{% url wsgiadmin.useradmin.views.change_passwd %}">{% trans "Change password" %}</a>
+                        <a href="{% url wsgiadmin.useradmin.views.change_passwd %}">{% trans "Change password" %}</a>
                     </li>
                     <li>
-                        <a class="btn" href="{% url wsgiadmin.users.views.ssh_passwd %}">{% trans "Change SSH/SFTP/FTP passwod" %}</a>
+                        <a href="{% url wsgiadmin.users.views.ssh_passwd %}">{% trans "Change SSH/SFTP/FTP passwod" %}</a>
                     </li>
                     <li>
-                        <a class="btn" href="{% url django.contrib.auth.views.logout %}">{% trans "Logout" %}</a>
+                        <a href="{% url django.contrib.auth.views.logout %}">{% trans "Logout" %}</a>
                     </li>
                 {% endif %}
             </ul>
         </div>
-        <div class="span9">
+        <div id="main" class="span9">
             <ul id="notifications">
                 {% if not u.parms.count_domains %}
                     <li class="info">
