--- a/wsgiadmin/templates/apache.html
+++ b/wsgiadmin/templates/apache.html
@@ -9,7 +9,7 @@
     <div id="message-box"></div>
 
     <h3>{% trans "List of existing apps and webs" %}</h3>
-    <table>
+    <table class="table table-striped">
         <thead>
         <tr>
             <th>{% trans "Create date" %}</th>
