--- a/wsgiadmin/templates/credit.html
+++ b/wsgiadmin/templates/credit.html
@@ -9,7 +9,7 @@
 
     <h3>{% blocktrans %}Buy some credit{% endblocktrans %}</h3>
 
-    <table>
+    <table class="table table-striped">
     <tr>
         <th colspan="3">{% trans "Summary" %}</th>
     </tr>
@@ -57,7 +57,7 @@
     {% endif %}
     </table>
 
-    <table>
+    <table class="table table-striped">
     <tr>
         <th colspan="2">{% trans "What you get for 1 credit" %}</th>
     </tr>
@@ -83,7 +83,7 @@
     </tr>
     </table>
 
-    <table>
+    <table class="table table-striped">
     <tr>
         <th colspan="2">{% trans "Buy some more" %}</th>
     </tr>
@@ -147,7 +147,7 @@
     </tr>
     </table>
 
-    <table>
+    <table class="table table-striped">
     <tr>
         <th>{% trans "If your credit's level reachs last 14 days" %}</th>
     </tr>
