--- a/wsgiadmin/templates/cron.html
+++ b/wsgiadmin/templates/cron.html
@@ -13,7 +13,7 @@
 
 <p>{% trans "Important: changes will destroy your current crontab!" %}</p>
 
-<table>
+<table class="table table-striped">
     <thead>
     <tr>
         <th>{% trans "Time preriod" %}</th>
