--- a/wsgiadmin/templates/db.html
+++ b/wsgiadmin/templates/db.html
@@ -9,7 +9,7 @@
     <div id="message-box"></div>
 
     <h3>{% blocktrans %}List of {{ dbtype }} databases{% endblocktrans %}</h3>
-    <table>
+    <table class="table table-striped">
         <thead>
         <tr>
             <th>{% trans "Database name" %}</th>
