--- a/wsgiadmin/templates/ftps.html
+++ b/wsgiadmin/templates/ftps.html
@@ -9,7 +9,7 @@
     <div id="message-box"></div>
 
     <h3>{% trans "List of FTP accounts" %}</h3>
-    <table>
+    <table class="table table-striped">
         <thead>
         <tr>
             <th>{% trans "Login" %}</th>
