--- a/wsgiadmin/templates/info.html
+++ b/wsgiadmin/templates/info.html
@@ -8,7 +8,7 @@
 {% block content %}
     <div class="clear"></div>
 
-    <table>
+    <table class="table table-striped">
         <tr>
             <th colspan="2">{% trans "Account's informations" %}</th>
         </tr>
@@ -45,7 +45,7 @@
     </table>
 
     <h3>{% trans "Service fees" %}</h3>
-    <table>
+    <table class="table table-striped">
         <tr>
             <th><strong>{% trans "Service" %}</strong></th>
             <th><strong>{% trans "Count" %}</strong></th>
