--- a/wsgiadmin/templates/invoices.html
+++ b/wsgiadmin/templates/invoices.html
@@ -49,7 +49,7 @@ function send_item(what) {
 </ul>
 
 <h3>{% trans "Seznam faktůr" %}</h3>
-<table>
+<table class="table table-striped">
 	<thead>
 		<tr>
 		   <th>{% trans "Číslo" %}</th>
