--- a/wsgiadmin/templates/login.html
+++ b/wsgiadmin/templates/login.html
@@ -1,21 +1,38 @@
 {% extends "form.html" %}
 {% load i18n %}
-
+{% load crispy_forms_tags %}
 {% block container %}
-    <h2>{% trans "Login" %}</h2>
+    <div class="row">
+        <div class="span6">
+            <h2>{% trans "Create new account" %}</h2>
+        </div>
+    </div>
+    <div class="row">
+        <div class="span6 offset2">
+            {% trans "To create a new account" %}
+            <a href="{% url registration %}">{% trans "use following form" %}</a>
+        </div>
+    </div>
+    <div class="row">
+        <div> &nbsp;</div>
+    </div>
+    <div class="row">
+        <div class="span6">
+            <h2>{% trans "Login to existing account" %}</h2>
+        </div>
+    </div>
+    <div class="row">
+        <div class="span6 offset2">
+            {% crispy form form_helper %}
+        </div>
+    </div>
+    <div class="row">
+        <div class="span3 offset3">
 
-    <form action="." method="post" id="reg-form">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <p>
-            <input type="submit" name="" class="input-submit-prihlasit" value="{% trans "Login" %}"/>
-        </p>
-
-        <p class="help">
             <a href="{% url reset_passwd %}">
                 {% trans "Send forgotten password" %}
-            </a> &nbsp;
-            <a href="{% url registration %}">{% trans "Registration" %}</a>
-        </p>
-    </form>
+            </a>
+        </div>
+
+    </div>
 {% endblock %}
