--- a/wsgiadmin/templates/requests.html
+++ b/wsgiadmin/templates/requests.html
@@ -12,7 +12,7 @@
             {% blocktrans %}Posledních {{ req_cnt }} požadavků{% endblocktrans %}</h2>
     {% endwith %}
 
-    <table>
+    <table class="table table-striped">
         <tr>
             <th>{% trans "Date" %}</th>
             <th>{% trans "Status" %}</th>
