--- a/wsgiadmin/m/css/style.css
+++ b/wsgiadmin/m/css/style.css
@@ -7,42 +7,29 @@ body {
     Content
 --------------------------------------------------------------------------------------------------------*/
 
-ul#notifications {
-    margin: 0 0 30px 0;
-}
 
-ul#notifications li {
-    margin: 0 0 10px 0;
-    padding: 10px 30px 10px 50px !important;
-    border: solid 1px #eee;
-    position: relative;
-    -webkit-border-radius: 6px;
-    -moz-border-radius: 6px;
-    border-radius: 6px;
-    list-style: none;
-}
-
-ul#notifications li.error {
+#notifications .error {
     background: #fdd1d1 url('../images/ico-error.png') no-repeat 20px 10px !important;
     border: solid 1px #dc8787;
 }
 
-ul#notifications li.info {
-    background: #dde4fe url('../images/ico-info.png') no-repeat 20px 10px !important;
-    border: solid 1px #94a8e8;
+#notifications .alert-info {
+    background: #D9EDF7 url('../images/ico-info.png') no-repeat 20px 10px !important;
+    padding-left: 50px;
 }
 
-ul#notifications li.warning {
+
+#notifications .warning {
     background: #fefbd4 url('../images/ico-upozorneni.png') no-repeat 20px 10px !important;
     border: solid 1px #e6db54;
 }
 
-ul#notifications li.success {
+#notifications .success {
     background: url('../images/ico-ok.png') no-repeat 20px 10px #d8fed1 !important;
     border: solid 1px #8ad17f;
 }
 
-ul#notifications li .zavrit {
+#notifications .zavrit {
     position: absolute;
     right: -5px;
     top: -5px;
@@ -115,20 +102,12 @@ div.ctrlHolder .zavrit {
     background: url('../images/bg-body-registrace.jpg') repeat;
 }
 
-.registrace a {
-    color: #d73951;
-}
-
 .registrace h1 {
     margin: 0 0 40px 50px;
     font-size: 40px;
     color: #71808a;
     font-weight: normal;
     text-shadow: 0 1px 1px #fff;
-}
-
-.registrace h1 strong {
-    color: #3b4248;
 }
 
 .registrace h2 {
@@ -174,31 +153,6 @@ div.ctrlHolder .zavrit {
     color: white;
 }
 
-/*--------------------------------------------------------------------------------------------------------
-    Co jsem doplnil, přetížil
---------------------------------------------------------------------------------------------------------*/
-
-#reg-form input {
-    background: url('../images/bg-input-text-registrace.jpg') no-repeat 0 0;
-    margin: 0 0 10px 20px;
-    padding: 0 2px;
-    width: 256px;
-    height: 31px;
-    border: 0;
-    color: #cfd8de;
-    font-size: 12px;
-}
-
-#reg-form select {
-    background: url('../images/bg-input-text-registrace.jpg') no-repeat 0 0;
-    margin: 0 0 10px 20px;
-    padding: 0 2px;
-    width: 256px;
-    height: 31px;
-    border: 0;
-    color: #cfd8de;
-    font-size: 12px;
-}
 
 .errorlist {
     margin-left: 15px;
@@ -215,54 +169,13 @@ div.ctrlHolder .zavrit {
     margin: 0 0 20px 120px;
 }
 
-#reg-form li {
-    list-style-type: none;
+#reg-form label {
+    float: left;
+    padding-top: 5px;
+    text-align: right;
+    width: 140px;
 }
 
-#reg-form .input-text-registrace {
-    background: url('../images/bg-input-text-registrace.jpg') no-repeat 0 0;
-    margin: 0 0 10px 20px;
-    padding: 0 2px;
-    width: 256px;
-    height: 31px;
-    border: 0;
-    color: #cfd8de;
-    font-size: 12px;
-}
-
-#reg-form .input-submit-prihlasit {
-    background: url('../images/input-submit-prihlasit.jpg') no-repeat 0 0;
-    margin: 15px 0 15px 95px;
-    padding-bottom: 2px;
-    width: 110px;
-    height: 31px;
-    border: 0;
-    cursor: pointer;
-    font-size: 12px;
-    font-weight: bold;
-    color: #fff;
-}
-
-#reg-form .input-submit-prihlasit:hover {
-    background: url('../images/input-submit-prihlasit.jpg') no-repeat 0 -31px;
-}
-
-#reg-form .input-submit-registrovat {
-    background: url('../images/input-submit-registrovat.jpg') no-repeat 0 0;
-    margin: 15px 0 15px 85px;
-    padding-bottom: 2px;
-    width: 130px;
-    height: 31px;
-    border: 0;
-    cursor: pointer;
-    font-size: 12px;
-    font-weight: bold;
-    color: #fff;
-}
-
-#reg-form .input-submit-registrovat:hover {
-    background: url('../images/input-submit-registrovat.jpg') no-repeat 0 -31px;
-}
 
 #prepnuti-uzivatele {
     position: absolute;
@@ -298,47 +211,6 @@ div.ctrlHolder .zavrit {
     color: #FFF161;
     text-align: center;
 }
-
-/* style2.css
-
-body { background: #ccc; color: #333; padding: 0; font-size: 12px; font-family: sans-serif; line-height: 1.5em; }
-
-a { color: #069; }
-
-h1 { margin: 0; font-size: 2em; font-weight: normal; }
-h2 { margin: 0; font-size: 1em; font-weight: bold; }
-
-.layout { overflow: hidden; }
-
-.panel { width: 25%; float: left; }
-.panelHolder { padding: 1em; }
-
-.items { margin: 1em 0; padding: 0; list-style: none; border: 1px solid #999; background: #fff; -moz-box-shadow: 0 0 2px #999; }
-.items li { padding: 1em; background-image: -moz-linear-gradient( #fff, #f2f2f2 ); -moz-box-shadow: inset 0 -1px 1px #ccc, inset 0 0 2px #fff; }
-.items li:hover { background-image: -moz-linear-gradient( #f2f2f2, #fff ); }
-.items li.active { background-image: -moz-linear-gradient( #f2f2f2, #ccc ); }
-.items h2 { float: left; }
-.items h2 a { color: #333; text-decoration: none; text-shadow: #fff 0 1px; }
-.items .labels { float: right; }
-.items li .general { overflow: hidden; }
-.items .details { display: none; }
-.items .active .details { display: block; }
-
-.labels span { font-size: 0.8em; text-transform: uppercase; color: #fff; background: #999; padding: 0 0.5em; -moz-border-radius: 1em; -webkit-border-radius: 1em; border-radius: 1em; }
-.labels .success { background: #009900; }
-.labels .running { background: #ff9900; }
-
-.details p { margin: 0.5em 0; }
-.details strong { display: block; font-weight: normal; font-size: 0.8em; text-transform: uppercase; color: #999999; }
-
-.icon { vertical-align: middle; }
-
-.note { margin: 0; color: #999; font-size: 0.8em; clear: both; }
-
-dl { margin: 1em 0; }
-dt { font-size: 0.8em; text-transform: uppercase; color: #999; padding: 0; margin: 0; }
-dd { padding: 0; margin: 0.5em 0; }
-*/
 
 .ajax_refresh {
     background-image: url('../icons/ajax-loader.png');
