--- a/wsgiadmin/templates/boxes.html
+++ b/wsgiadmin/templates/boxes.html
@@ -15,7 +15,7 @@
     <div id="message-box"></div>
 
     <h3>{% trans "List of e-mail boxes" %}</h3>
-    <table>
+    <table class="table table-striped">
         <thead>
         <tr>
             <th>{% trans "E-mail" %}</th>
