--- a/wsgiadmin/templates/domains.html
+++ b/wsgiadmin/templates/domains.html
@@ -10,7 +10,7 @@
 
     <h3>{% trans "List of your domains" %}</h3>
 
-    <table>
+    <table class="table table-striped">
         <thead>
         <tr>
             <th>{% trans "Insert date" %}</th>
