--- a/wsgiadmin/templates/form.html
+++ b/wsgiadmin/templates/form.html
@@ -4,24 +4,19 @@
 {% block bodyclass %}registrace{% endblock %}
 {% block body %}
     <h1>
-        <strong>{% trans "Administration" %} /</strong> {{ site }} /
+        <a href="/">{% trans "Administration" %} / {{ site }} /</a>
         {% block h1title %}{% endblock %}
     </h1>
 
     {% if messages %}
         <ul id="notifications">
             {% for message in messages %}
-                <li class="{% if message.tags %}{{ message.tags }}{% else %}info{% endif %}">{{ message }}</li>
+                <li class="alert alert-info">{{ message }}</li>
             {% endfor %}
         </ul>
     {% endif %}
 
     <div class="container">
-        <div class="container-top">
-            <div class="container-bottom">
-                {% block container %}
-                {% endblock %}
-            </div>
-        </div>
+        {% block container %}{% endblock %}
     </div>
 {% endblock %}
