--- a/wsgiadmin/templates/reg.html
+++ b/wsgiadmin/templates/reg.html
@@ -1,48 +1,28 @@
-{% extends "base.html" %}
+{% extends "form.html" %}
 {% load i18n %}
+{% load crispy_forms_tags %}
 
 {% block bodyclass %}registrace{% endblock %}
-{% block body %}
-    <h1>
-        <strong>{% trans "Administration" %} /</strong> {{ site }} / {% trans "Registration" %}
-    </h1>
+{% block container %}
 
-    <div class="container">
-        <div class="container-top">
-            <div class="container-bottom">
-                <h2>{% trans "Registration" %}</h2>
+    <h2>{% trans "Registration" %}</h2>
+    <form action="{% url registration %}" method="post" class="well form-horizontal" id="reg-form">
+        {% crispy form1 form_helper %}
+        {% crispy form2 form_helper %}
+        {% crispy form3 form_helper %}
+        <div class="form-actions">
+            <input type="submit" value="{% trans "Register" %}"/>
+        </div>
+    </form>
 
-                <form action="{% url registration %}" class="registrace-prihlaseni" id="reg-form" method="post">
-                    {% csrf_token %}
-                    {{ form1.as_p }}
-                    <div class="border-01"></div>
-                    {{ form2.as_p }}
-                    {{ form3.as_p }}
-                    <p>
-                        <input type="submit" name="" class="input-submit-registrovat" value="Registrovat"/>
-                    </p>
-
-                    {% if config.terms_url %}
-                        <div class="terms">{% trans "By click on the button, you agree with our terms" %}</div>{% endif %}
-                    <p class="help">
-                        <a href="{% url login %}">{% trans "Login" %}</a>
-                        {% if config.terms_url %}|
-                            <a href="{{ config.terms_url }}" target="_blank">{% trans "Terms" %}</a>{% endif %}
-                    </p>
-                </form>
-
-                {% if messages %}
-                    <ul id="notifications">
-                        {% for message in messages %}
-                            <li
-                                    {% if message.tags %} class="{{ message.tags }}"{% else %} class="info"{% endif %}>{{ message }}</li>
-                        {% endfor %}
-                    </ul>
-                {% endif %}
-
-            </div>
+    {% if config.terms_url %}
+        <div class="terms">{% trans "By click on the button, you agree with our terms" %}</div>{% endif %}
+    <div class="row">
+        <div class="span6">
+            <a href="{% url login %}">{% trans "Go back to login screen" %}</a>
+            {% if config.terms_url %}|
+                <a href="{{ config.terms_url }}" target="_blank">{% trans "Terms" %}</a>{% endif %}
         </div>
     </div>
-    <div class="clear"></div>
 
 {% endblock %}
