--- a/wsgiadmin/templates/users.html
+++ b/wsgiadmin/templates/users.html
@@ -22,7 +22,7 @@
 	</div>
 	<div class="content-box-content">
 		<div class="tab-content default-tab" id="tab1">
-			<table>
+			<table class="table table-striped">
 				<thead>
 					<tr>
 					   <th>Jméno uživatele</th>
