--- a/wsgiadmin/templates/admin.html
+++ b/wsgiadmin/templates/admin.html
@@ -182,7 +182,7 @@
                         <a href="{% url wsgiadmin.useradmin.views.change_passwd %}">{% trans "Change password" %}</a>
                     </li>
                     <li>
-                        <a href="{% url wsgiadmin.users.views.ssh_passwd %}">{% trans "Change SSH/SFTP/FTP passwod" %}</a>
+                        <a href="{% url wsgiadmin.users.views.ssh_passwd %}">{% trans "Change SSH/SFTP/FTP password" %}</a>
                     </li>
                     <li>
                         <a href="{% url django.contrib.auth.views.logout %}">{% trans "Logout" %}</a>
