--- a/wsgiadmin/templates/paginator.html
+++ b/wsgiadmin/templates/paginator.html
@@ -3,7 +3,7 @@
     <a href="?page=1" title="{% trans "First page" %}">&laquo; {% trans "First" %}</a> &nbsp;
     <a href="?page={{ page_obj.previous_page_number }}" title="{% trans "Previous page" %}">&laquo; {% trans "Previous" %}</a> &nbsp;
 {% else %}
-    <span class="inactive"> &laquo; {% trans "First" %} &laquo; {% trans "Previous" %}  &nbsp; </span>
+    {# <span class="inactive"> &laquo; {% trans "First" %} &laquo; {% trans "Previous" %}  &nbsp; </span> #}
 {% endif %}
 
 {% for p in page_obj.paginator.page_range %}
@@ -18,5 +18,5 @@
     <a href="?page={{ page_obj.next_page_number }}" title="{% trans "Next page" %}">{% trans "Next" %} &raquo;</a> &nbsp; 
     <a href="?page=last" title="{% trans "Last page" %}">{% trans "Last" %} &raquo;</a>
 {% else %}
-    <span class="inactive">{% trans "Next" %} &raquo; &nbsp; {% trans "Last" %} &raquo;</span>
+    {# <span class="inactive">{% trans "Next" %} &raquo; &nbsp; {% trans "Last" %} &raquo;</span> #}
 {% endif %}
