Cleaning, fix fee couting durin buy credit action

--- a/wsgiadmin/templates/bill.html
+++ b/wsgiadmin/templates/bill.html
@@ -21,7 +21,7 @@
     {% endfor %}
     <table class="table table-striped">
     <tr>
-        <th colspan="3">{% trans "What you pay by months" %}</th>
+        <th colspan="3">{% trans "What you payed by months" %}</th>
     </tr>
     {% for month in months %}
     <tr>
