--- a/wsgiadmin/templates/credit.html
+++ b/wsgiadmin/templates/credit.html
@@ -15,8 +15,8 @@
     </tr>
     {% if u.parms.fee %}
             <tr>
-                <td>{% trans "Webs/Applications" %}</td>
-                <td>{{ u.parms.count_sites }}×</td>
+                <td>{% trans "Regular fee" %}</td>
+                <td></td>
                 <td>{{ u.parms.fee|floatformat:2 }}</td>
             </tr>
         {% else %}
@@ -25,7 +25,7 @@
                 <td>{{ u.parms.count_sites }}×</td>
                 <td>{{ u.parms.pay_for_sites|floatformat:2 }}</td>
             </tr>
-        {% endif %}
+    {% endif %}
 
         {% if not u.parms.fee %}
             <tr>
