--- a/wsgiadmin/templates/base.html
+++ b/wsgiadmin/templates/base.html
@@ -54,7 +54,8 @@
     <title>{% trans "Administration" %} {{ site }}</title>
 </head>
 <body class="{% block bodyclass %}{% endblock %}">
-<div class="container-fluid">
+
+<div id="top" class="container-fluid">
     {% block header %}{% endblock %}
     {% block body %}{% endblock %}
 </div>
