--- a/wsgiadmin/m/css/style.css
+++ b/wsgiadmin/m/css/style.css
@@ -1,8 +1,14 @@
 body {
-    background: #fff;
-    padding-top: 50px;
+    background: #555555;
 }
 
+#top {
+    padding-top: 50px;
+    background: #eeeeee;
+    -moz-box-shadow: 0 0 200px rgba(0, 0, 0, 0.3) inset;
+    -webkit-box-shadow: 0 0 200px rgba(0, 0, 0, 0.3) inset;
+    box-shadow: 0 0 200px rgba(0, 0, 0, 0.3) inset;
+}
 /*--------------------------------------------------------------------------------------------------------
     Content
 --------------------------------------------------------------------------------------------------------*/
@@ -36,109 +42,6 @@ body {
     cursor: pointer;
 }
 
-/*--------------------------------------------------------------------------------------------------------
-    Notifications form
---------------------------------------------------------------------------------------------------------*/
-div.ctrlHolder {
-    padding: 0 !important;
-    border-bottom: none !important;
-}
-
-div.ctrlHolder.error {
-    background: #fdd1d1 url('../images/ico-error.png') no-repeat 20px 10px !important;
-    margin: 0 0 10px 0;
-    padding: 10px 30px 10px 50px !important;
-    position: relative;
-    -webkit-border-radius: 6px;
-    -moz-border-radius: 6px;
-    border-radius: 6px;
-    border: solid 1px #dc8787;
-}
-
-div.ctrlHolder.info {
-    background: #dde4fe url('../images/ico-info.png') no-repeat 20px 10px !important;
-    margin: 0 0 10px 0;
-    padding: 10px 30px 10px 50px !important;
-    position: relative;
-    -webkit-border-radius: 6px;
-    -moz-border-radius: 6px;
-    border-radius: 6px;
-    border: solid 1px #94a8e8;
-}
-
-div.ctrlHolder.warning {
-    background: #fefbd4 url('../images/ico-upozorneni.png') no-repeat 20px 10px !important;
-    margin: 0 0 10px 0;
-    padding: 10px 30px 10px 50px !important;
-    position: relative;
-    -webkit-border-radius: 6px;
-    -moz-border-radius: 6px;
-    border-radius: 6px;
-    border: solid 1px #e6db54;
-}
-
-div.ctrlHolder.success {
-    background: url('../images/ico-ok.png') no-repeat 20px 10px #d8fed1 !important;
-    margin: 0 0 10px 0;
-    padding: 10px 30px 10px 50px !important;
-    position: relative;
-    -webkit-border-radius: 6px;
-    -moz-border-radius: 6px;
-    border-radius: 6px;
-    border: solid 1px #8ad17f;
-}
-
-div.ctrlHolder .zavrit {
-    position: absolute;
-    right: -5px;
-    top: -5px;
-    cursor: pointer;
-}
-
-/*--------------------------------------------------------------------------------------------------------
-    Registrace a prihlaseni
---------------------------------------------------------------------------------------------------------*/
-.registrace {
-    background: url('../images/bg-body-registrace.jpg') repeat;
-}
-
-.registrace h1 {
-    margin: 0 0 40px 50px;
-    font-size: 40px;
-    color: #71808a;
-    font-weight: normal;
-    text-shadow: 0 1px 1px #fff;
-}
-
-.registrace h2 {
-    margin: 0 0 20px 50px;
-    font-size: 25px;
-    color: #71808a;
-    text-shadow: 0 1px 1px #fff;
-}
-
-.registrace p {
-    margin: 0 0 40px 50px;
-    font-size: 15px;
-    color: #3b4248;
-    text-shadow: 0 1px 1px #fff;
-    line-height: 25px;
-}
-
-.registrace form p {
-    margin: 0;
-    font-size: 12px;
-    text-shadow: none;
-}
-
-.registrace #main {
-    padding: 40px 0 150px 0;
-}
-
-.registrace #main-inside {
-    margin: 0 auto;
-    width: 800px;
-}
 
 #header {
     width: 100%;
@@ -152,7 +55,6 @@ div.ctrlHolder .zavrit {
 #login .username {
     color: white;
 }
-
 
 .errorlist {
     margin-left: 15px;
