--- a/wsgiadmin/templates/base.html
+++ b/wsgiadmin/templates/base.html
@@ -20,6 +20,7 @@
     <![endif]-->
     <script type="text/javascript" src="{{ STATIC_URL }}js/jquery-1.7.1.min.js"></script>
     <script type="text/javascript" src="{{ STATIC_URL }}js/jquery.cookie.js"></script>
+    <script type="text/javascript" src="{{ STATIC_URL }}js/bootstrap-dropdown.js"></script>
     <script type="text/javascript">
         var delete_success_callback = function (data) {
             if (data.result == 'OK') {
