--- a/wsgiadmin/templates/admin.html
+++ b/wsgiadmin/templates/admin.html
@@ -42,23 +42,26 @@
                         <a href="{% url wsgiadmin.useradmin.views.change_passwd %}">{% trans "Settings" %}</a>
                     </li>
                 </ul>
-                <ul class="nav pull-right">
-                    <li id="login">
-               <span class="username">
-                   {% if not u.is_superuser and superuser != u %}
-                       <strong>{{ u.username }}</strong>
-                       <p id="prepnuti-uzivatele"><i>{% trans "switched" %}</i>
-                           <a href="{% url wsgiadmin.users.views.switch_to_admin 1 %}">{% trans "back" %}</a>
-                           <span id="uzivatel">({% trans "superuser" %})</span>
-                       </p>
-                   {% else %}
-                       {{ u.username }} {% if u.is_superuser %}
-                       <span id="uzivatel">({% trans "superuser" %})</span>{% endif %}
-                   {% endif %}
-               </span>
-               <span class="logout">
-                   <a class="btn" href="{% url django.contrib.auth.views.logout %}">{% trans "Logout" %}</a>
-               </span>
+                <ul class="nav pull-right" style="margin-right: 20px;">
+                    <li>
+                        <div class="btn-group">
+                            <a href="#" class="btn" data-toggle="dropdown">
+                                {% if not u.is_superuser and superuser != u %}
+                                   <strong>{{ u.username }}</strong>
+                                   <i>{% trans "switched" %}</i>
+                                    <a href="{% url wsgiadmin.users.views.switch_to_admin 1 %}">{% trans "back" %}</a>
+                                    <span id="uzivatel">({% trans "superuser" %})</span>
+                                    <span class="caret"></span>
+                               {% else %}
+                                   {{ u.username }}
+                                   {% if u.is_superuser %}({% trans "superuser" %})</span>{% endif %}
+                               {% endif %}
+                            </a>
+                            <ul class="dropdown-menu">
+                                <!-- dropdown menu links -->
+                                    <li><a href="{% url django.contrib.auth.views.logout %}">{% trans "Logout" %}</a></li>
+                            </ul>
+                        </div>
                     </li>
                 </ul>
             </div>
