User's list rewrition

--- a/wsgiadmin/templates/users.html
+++ b/wsgiadmin/templates/users.html
@@ -10,6 +10,10 @@
 	function remove(what) {
 		$("#user_"+what).load("{% url wsgiadmin.users.views.rm 0 %}"+what)
 	}
+
+    var data = [
+        {{ users }}
+    ]
 {% endblock %}
 
 {% block content %}
@@ -34,9 +38,9 @@
 					   <th>Akce</th>
 					</tr>
 				</thead>
-				{% if users %}
 				<tbody>
-					{% for user in users %}
+
+                    {#
 					<tr>
 						<td>{{ user }}</td>
 						<td>
@@ -55,22 +59,15 @@
                         {% endwith %}
 						<td id="user_{{ user.id }}">
                             <ul class="akce">
-                                <li><a href="{% url wsgiadmin.users.views.switch_to_user user.id num_page %}"><img src="{{ STATIC_URL }}images/ico-prepnout.png" alt="{% trans "Switch" %}" /></a></li>
+                                <li><a href="{% url wsgiadmin.users.views.switch_to_user user.id %}"><img src="{{ STATIC_URL }}images/ico-prepnout.png" alt="{% trans "Switch" %}" /></a></li>
                                 <li><a href="{% url wsgiadmin.users.views.install user.id %}" title="{% trans "Install" %}"><img src="{{ STATIC_URL }}images/ico-instalace.png" alt="{% trans "Install" %}" /></a></li>
                                 <!--<li><a href="{% url wsgiadmin.users.views.update user.id %}" title="{% trans "Edit" %}"><img src="{{ STATIC_URL }}images/ico-editovat.png" alt="{% trans "Edit" %}" /></a></li>-->
                                 <li class="smazat"><a href="#" title="{% trans "Delete" %}" onclick="if(confirm('{% trans "Are you sure?" %}')) remove('{{ user.id }}')"><img src="{{ STATIC_URL }}images/ico-smazat.png" alt="{% trans "Delete" %}" /></a></li>
                             </ul>
 						</td>
 					</tr>
-					{% endfor %}
+                    #}
 				</tbody>
-				{% else %}
-				<tbody>
-				<tr>
-					<td colspan="5">Žádný uživatel ještě nebyl přidán.</td>
-				</tr>
-				</tbody>
-				{% endif%}
 			</table>
 		</div>
 	</div>
