--- a/wsgiadmin/templates/admin.html
+++ b/wsgiadmin/templates/admin.html
@@ -49,7 +49,7 @@
                                 {% if not u.is_superuser and superuser != u %}
                                    <strong>{{ u.username }}</strong>
                                    <i>{% trans "switched" %}</i>
-                                    <a href="{% url wsgiadmin.users.views.switch_to_admin 1 %}">{% trans "back" %}</a>
+                                    <a href="{% url wsgiadmin.users.views.switch_to_admin %}">{% trans "back" %}</a>
                                     <span id="uzivatel">({% trans "superuser" %})</span>
                                     <span class="caret"></span>
                                {% else %}
