Save button fix, new domain editor

--- a/wsgiadmin/templates/base.html
+++ b/wsgiadmin/templates/base.html
@@ -53,6 +53,7 @@
     </script>
 
     <title>{% trans "Administration" %} {{ site }}</title>
+    {% block extra %}{% endblock %}
 </head>
 <body class="{% block bodyclass %}{% endblock %}">
 
